samples/_failures_safe/1761006236_f4dfc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a70e77f.c: In function ‘main’:
./samples/SAFE/__tmp_6a70e77f.c:141:21: error: expected ‘]’ at end of input
  141 |         input_data[i
      |                     ^
      |                     ]
./samples/SAFE/__tmp_6a70e77f.c:141:9: error: expected declaration or statement at end of input
  141 |         input_data[i
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_6a70e77f.c:141:9: error: expected declaration or statement at end of input
